syntax = "proto3";

package stakeholders;

service StakeholdersService {
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc RegisterTourist (RegisterRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int64 id = 1;
  string access_token = 2;
}

message RegisterRequest {
  string username = 1;
  string password = 2;
  string email = 3;
  string role = 4;
}
